--- a/css/contact.css
+++ b/css/contact.css
@@ -2,7 +2,7 @@ hr{
     margin-left: 100px;
     margin-right: 100px;
 }
-.h5-contact{
+.h5-contact,.contact{
   color: #087e8b;
 }
 .get-in-touch-p{
