--- a/css/portofolio.css
+++ b/css/portofolio.css
@@ -1,4 +1,4 @@
-.h5second{
+.h5second,.porf-bot{
     color: #087e8b;
 }
 .porto-img{
@@ -13,7 +13,7 @@
 .port-text{
     margin-left: 120px;
     line-height: 2;
-    padding-top: 100px;
+    padding-top: 70px;
     border-top-style: ridge;
     border-bottom-style: ridge;
 }.port-text2{
@@ -62,8 +62,12 @@
     margin-left: 20px;
 }#portofolio-slide-show{
     margin-top: 100px;
+   background-color: #fafafa;
+}.carousel-control-prev-icon,.carousel-control-next-icon{
     background-color:#087e8b;
-}.slide-text{
+}
+
+.slide-text{
     margin-left: 100px;
     margin-bottom: 40px;
 }.slide-text2{
