--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ outline: none;
 
 .navbar{
     padding-top: 50px;
-    margin-right: 147px;
+    margin-right: 100px;
     margin-left: 130px;
     
 }
@@ -35,7 +35,7 @@ h5:hover{
     margin-top: 50px;
 }
 .homepageimg{
-    margin-top: 0px;
+    margin-top: 10px;
     margin-left: 120px;
     margin-right: 120px;
     
@@ -44,20 +44,19 @@ h5:hover{
 
    }.hometext{
        position: absolute;
-       width: 33%;
+       width: 36%;
        background-color: white;
-       top: 340px;
+       top: 335px;
        left: 120px;
-       padding-top: 50px;
+       padding-top: 30px;
        padding-right: 50px;
        
        
    }.h3home{
-       font-size: 2.8rem;
-       font-family: 'Ibarra Real Nova', serif;
+       font-size: 50px;
+       font-family: "Ibarra Real Nova", serif;
        font-weight: 700;
-   }.name-home{
-       font-family: 'sacramento',cursive;
+       letter-spacing: -0.45px;
    }
    .btn-about-me{
        margin-top: 30px;
@@ -104,12 +103,19 @@ h5:hover{
    .section-middle-h2{
     margin-left: 120px;
      margin-top: 120px;  
+   }.interst-h2{
+       font-size: 40px;
+       line-height: 42px;
+       letter-spacing: -0.36px;
+       font-weight: 550;
    }
-   
+   .section-middle-hr{
+       margin-left: -25px;
+       margin-right: 30px;
+   }
    .section-middle{
        margin-top: 150px;
-       margin-left: 70px;
-   }.btn{
+      }.btn{
        width: 170px;
        height: 48px;
        background-color: #fafafa;
@@ -196,6 +202,8 @@ margin-right: 20px;
             margin-left: 50px;
             margin-top: 50px;
             
+        }.interst-h2{
+            font-size: 30px;
         }
         .section-middle{
             margin-top: 20px;
@@ -220,8 +228,8 @@ margin-right: 20px;
         }.btn{
             margin-left:-40px;
         }.contact{
+            font-weight: 800;
             margin-top: -10px;
             margin-left: 160px;
         }
-       
     }
